_sass/_custom.scss
/* 
    Put your custom SCSS here! 
    This allows you to override any CollectionBuilder or Bootstrap CSS without modifying the base theme files directly.
*/

/* -----------------------------------------
    Custom styles for Paul Thomas Annotated
   ----------------------------------------- */

/* ---------------------------------------------------------------------
    Colors
    ------
    These should match the values in _data/config-theme-colors.csv,
    and the Mirador theme must be manually adjusted in pages/mirador.md.
   --------------------------------------------------------------------- */

$primary: #f6754f;
$secondary: #252525;
$success: #d0db72;
$info: #CA40C0;
$warning: #f8c667;
$danger: #e74a75;
$light: #F9F6EE;
$dark: #000000;

$dark-border: #373B3E;
$disabled: #5E6568;

$nav-text-inactive: #ffffff8c;
$nav-text-hover: #ffffffbf;
$focused-glow: #f6764f58;

/* -------
    Fonts
   ------- */

   .font-boog {
        font-family: "cheesecake", sans-serif;
        font-weight: 900;
        font-style: normal;
   }

   .font-hard {
        /*
        font-family: "bebas-neue-by-fontfabric", sans-serif;
        font-weight: 400;
        font-style: normal;
        */
        font-family: "courier-prime", monospace;
        font-weight: 400;
        font-style: italic;
        text-transform: uppercase;
   }

   .font-inhe {
        font-family: "acier-bat-outline", sans-serif;
        font-weight: 400;
        font-style: normal;
   }

   .font-lico {
        font-family: "lint-mccree", sans-serif;
        font-weight: 700;
        font-style: italic;
   }

   .font-magn {
        font-family: "bembo-book-mt-pro", sans-serif;
        font-weight: 700;
        font-style: normal;
        text-transform: lowercase;
   }

   .font-mast {
        font-family: "berthold-baskerville-pro", serif;
        font-weight: 400;
        font-style: normal;
   }

   .font-obaa {
        font-family: "octin-college", sans-serif;
        font-weight: 900;
        font-style: normal;
   }

   .font-phan {
        font-family: "castoro-titling", serif;
        font-weight: 400;
        font-style: normal;
   }

   .font-punc {
        font-family: "amatic-sc", sans-serif;
        font-weight: 700;
        font-style: normal;
   }

   .font-twbb {
        font-family: "sabbath-black", serif;
        font-weight: 400;
        font-style: normal;
   }

/* Accessibility Utility */
    .visually-hidden {
        clip: rect(0 0 0 0);
        clip-path: inset(50%);
        height: 1px;
        overflow: hidden;
        position: absolute;
        white-space: nowrap;
        width: 1px;
    }

/* --------------------------------
    General Overrides and Utilities
   -------------------------------- */

body {
    background-color: $dark;
    overflow-x: hidden;
}

@media only screen and (max-width: 576px) {
    body {
        overflow-x: hidden;
    }
}

.card {
    background-color: $dark;
    color: #F8F9FA;
    border: none;
}

.item {
    transition: all 0.3s ease-in-out;
    position: relative;

    .card-text-container {
        position: absolute;
        margin: 0;
        // top: 50%;
        // left: 50%;
        bottom: .5rem;
        width: 100%;
        // padding: 0.5rem 0;
        // background-color: #00000093;
        // -ms-transform: translate(-50%, -50%);
        // transform: translate(-50%, -50%);
        display: none;

        .card-title, .card-text {
            color: $light !important;
            text-shadow: 2px 2px 2px #000000;
        }
    }
}

.item:hover {
    transform: scale(1.1);

    .card-text-container {
        display: block;
    }
}

.pagination {
    .paginate_button .page-link {
        background-color: $dark;
        color: $light;
        border: 1px solid $dark-border;

        &:focus {
            box-shadow: 0 0 0 .25rem $focused-glow;
        }
    }

    .paginate_button.disabled .page-link {
        color: $disabled;
    }

    .paginate_button.active .page-link {
        background-color: $primary;
        color: $dark;
        border: none;
    }

}

#scroll-to-top {
    color: $primary;
}

.darkened-overlay {
    height: 100%;
    width: 100%;
    background-color: $dark;
    opacity: .15;
}

/* --------
    Header
   -------- */

#site-title img {
    &:hover {
        filter: opacity(80%);
    }
}

/* ------------
    Navigation
   ------------ */

.navbar {
    padding: 0.5rem;
    font-size: 1.25rem;
}

.navbar-nav .nav-link:first-child {
    padding-left: 0;
    padding-right: 1.5rem;
}

.navbar .dropdown-menu {
    background-color: $dark;
    border: 1px solid $secondary;
    font-size: 1.25rem;
}

.nav-item {
     &:focus {
        border: none;
    }
}

.navbar .dropdown-menu .dropdown-item {
    color: $nav-text-inactive;
    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out;
    
    &.active {
        color: $light;
        background-color: $secondary;
    }

    &:hover {
        background-color: $dark;
        color: $nav-text-hover;
    }

    &:focus {
        background-color: $dark;
        border: none;
    }
}

/* -------------------
    Homepage Elements
   ------------------- */

#home-title {
    h2 {
        margin: 0;
    }

    .full-logo {
        display: block;
    }

    .narrow-logo {
        display: none;
    }
}

@media only screen and (max-width: 768px) {
    #home-title .full-logo {
        display: none;
    }

    #home-title .narrow-logo {
        display: block;
    }
}

.image-btn {
    position: relative;
    height: 250px;
    padding: 0;
    background-size: 736px 414px;
    background-position: center;
    background-repeat: no-repeat;
    color: $light;
    text-shadow: 2px 2px 2px $dark;
    background-color: $secondary;
    border: none;
    transition: all .2s ease-in-out;

    &:hover {
        transform: scale(1.1);
    }

    &.disabled:hover {
        transform: none;
    }

    a {
        color: $light;
        margin: 0;
        position: absolute;
        height: 100%;
        width: 100%;
        top: 50%;
        left: 50%;
        -ms-transform: translate(-50%, -50%);
        transform: translate(-50%, -50%);

        &:hover {
            color: $light;
        }

        &:focus {
            box-shadow: 0 0 0 .25rem $focused-glow;
        }

    }

    h2 {
        margin: 0;
        position: absolute;
        font-size: 2.5rem;
        top: 50%;
        left: 50%;
        -ms-transform: translate(-50%, -50%);
        transform: translate(-50%, -50%);
    }
}

@media only screen and (max-width: 576px) {
    .image-btn {
        height: 200px;
    }
}

.coming-soon-overlay {
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0px;
    background-color: #0000005e;
    text-align: center;
    overflow: hidden;

    .coming-soon-message {
        font-size: 1.5rem;
        background-color: $primary;
        color: $dark;
        text-shadow: none;
        position: absolute;
        width: 150%;
        top: 40%;
        left: -25%;
        padding: 0;
        rotate: -30deg;
    }
}

/* --------------------
    Film Page Elements
   -------------------- */

#film-banner {
    width: 100%;
    overflow-x: clip;

    img {
        width: 100%;
        height: 500px;
        object-fit: cover;
    }
}

@media screen and (max-width: 576px) {
    #film-banner img {
        height: 300px;
    }
}


/* ----------------------
    Mosaic Visualization
   ---------------------- */

.mosaic {
    width: 100%;
    font-size: 15px;
}

.mosaic-item {
    display: inline-block;

    a {

        img {
            height: 15px;
            margin: 0;
            padding: 0;
            /* transition: all .25s ease-in-out; */
        }

        &:hover, &:focus {
            background-color: #f6754f;

            img {
                transform: scale(10) translateY(-10px);
            }
        }
    }
}

/* -----------------
    Browse Settings
   ----------------- */

.browse-sort-menu {
    background-color: $dark;
    border: 1px solid $secondary;
}

.browse-sort-item {
    color: $light;
    
    &:hover {
        background-color: $focused-glow;
        color: $light;
    }

    &.active {
        background-color: $primary;
        color: $dark;
    }
}

.facet-options .dropdown-menu {
    color: $light;
    background-color: $dark;
    border: 1px solid $secondary;
}

.form-check-input {
    background-color: $light;
    border: 1px solid $dark-border;

    &:checked {
        background-color: $primary;
        border: 1px solid $primary;
    }

    &:focus {
        border: 1px solid $primary;
        box-shadow: 0 0 0 .25rem $focused-glow;
    }
}

.info-button {
    height: 2rem;
    width: 2rem;
    line-height: 0;
    transform: scale(.75);
    position: relative;
    top: -2px;
    font-weight: 700;
}

/* ------------------------------
    Responsive Mirador Container
   ------------------------------ */

.mirador-container {
    position: relative;
    overflow: hidden;
    width: 100%;
    padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */

    iframe {
        position: absolute;
        top: 0;
        left: 0;
        bottom: 0;
        right: 0;
        width: 100%;
        height: 100%;
    }
}

@media only screen and (max-width: 576px) {
    .mirador-container {
        padding-top: 100%; /* 1:1 Aspect Ratio */
    }
}

/* ------------
    Cloud Page
   ------------ */
.cloud-container {
    border: 1px solid $light;
    border-radius: .25rem;
    padding: 1rem;
    margin-bottom: 1rem;
}

